asignment2-initial/src/main/mt22/parser/.antlr/MT22Parser.java
// Generated from d:\HCMUT_BaiTap\HK222\PPL\PPL-Assignment\asignment2-initial\src\main\mt22\parser\MT22.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MT22Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PARAM_KEYWORDS=1, BOOLLIT=2, FLOATLIT=3, INTLIT=4, STRINGLIT=5, INTEGER=6, 
		VOID=7, FLOAT=8, BOOLEAN=9, STRING=10, AUTO=11, OF=12, ARR=13, INHERIT=14, 
		FUNCTION=15, IF=16, ELSE=17, BREAK=18, RETURN=19, OUT=20, FOR=21, CONTINUE=22, 
		DO=23, WHILE=24, TRUE=25, FALSE=26, COMMENT=27, C_COMMENT=28, ID=29, LB=30, 
		RB=31, SQLB=32, SQRB=33, DOT=34, COMMA=35, SEMI=36, COLON=37, LCB=38, 
		RCB=39, ADDSUB=40, MULDIVMOD=41, ANDOR=42, COMPARE=43, ADD=44, MINUS=45, 
		MUL=46, DIV=47, PCENT=48, NOT=49, AND=50, OR=51, SAME=52, NOTSAME=53, 
		LOWER=54, HIGHER=55, LOWER_EQ=56, HIGHER_EQ=57, SCOPE=58, EQ=59, WS=60, 
		UNCLOSE_STRING=61, ILLEGAL_ESCAPE=62, ERROR_CHAR=63;
	public static final int
		RULE_program = 0, RULE_decllist = 1, RULE_decl = 2, RULE_vardecl = 3, 
		RULE_varnoinit = 4, RULE_varassign = 5, RULE_vartype = 6, RULE_atomic_type = 7, 
		RULE_idlist = 8, RULE_array = 9, RULE_arraydecl = 10, RULE_arrayinit = 11, 
		RULE_arraylit = 12, RULE_arrayVal = 13, RULE_arrayParam = 14, RULE_dimension = 15, 
		RULE_funcdecl = 16, RULE_base_funcdecl = 17, RULE_returntype = 18, RULE_body = 19, 
		RULE_paramlist = 20, RULE_paramprime = 21, RULE_param = 22, RULE_paramHead = 23, 
		RULE_parambase = 24, RULE_paramtype = 25, RULE_blocklist = 26, RULE_stmt = 27, 
		RULE_allowed_blockstmt = 28, RULE_assignstmt = 29, RULE_ifstmt = 30, RULE_if_noelsestmt = 31, 
		RULE_ifelsestmt = 32, RULE_forstmt = 33, RULE_whilestmt = 34, RULE_dowhile_stmt = 35, 
		RULE_returnstmt = 36, RULE_callstmt = 37, RULE_continuestmt = 38, RULE_breakstmt = 39, 
		RULE_blockstmt = 40, RULE_loopstmt = 41, RULE_scalar_variable = 42, RULE_exprlist = 43, 
		RULE_expprime = 44, RULE_expr = 45, RULE_expr1 = 46, RULE_expr2 = 47, 
		RULE_expr3 = 48, RULE_expr4 = 49, RULE_expr5 = 50, RULE_expr6 = 51, RULE_expr7 = 52, 
		RULE_callexpr = 53, RULE_subexpr = 54, RULE_indexop = 55;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "decllist", "decl", "vardecl", "varnoinit", "varassign", "vartype", 
			"atomic_type", "idlist", "array", "arraydecl", "arrayinit", "arraylit", 
			"arrayVal", "arrayParam", "dimension", "funcdecl", "base_funcdecl", "returntype", 
			"body", "paramlist", "paramprime", "param", "paramHead", "parambase", 
			"paramtype", "blocklist", "stmt", "allowed_blockstmt", "assignstmt", 
			"ifstmt", "if_noelsestmt", "ifelsestmt", "forstmt", "whilestmt", "dowhile_stmt", 
			"returnstmt", "callstmt", "continuestmt", "breakstmt", "blockstmt", "loopstmt", 
			"scalar_variable", "exprlist", "expprime", "expr", "expr1", "expr2", 
			"expr3", "expr4", "expr5", "expr6", "expr7", "callexpr", "subexpr", "indexop"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, "'integer'", "'void'", "'float'", 
			"'boolean'", "'string'", "'auto'", "'of'", "'array'", "'inherit'", "'function'", 
			"'if'", "'else'", "'break'", "'return'", "'out'", "'for'", "'continue'", 
			"'do'", "'while'", "'true'", "'false'", null, null, null, "'('", "')'", 
			"'['", "']'", "'.'", "','", "';'", "':'", "'{'", "'}'", null, null, null, 
			null, "'+'", "'-'", "'*'", "'/'", "'%'", "'!'", "'&&'", "'||'", "'=='", 
			"'!='", "'<'", "'>'", "'<='", "'>='", "'::'", "'='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "PARAM_KEYWORDS", "BOOLLIT", "FLOATLIT", "INTLIT", "STRINGLIT", 
			"INTEGER", "VOID", "FLOAT", "BOOLEAN", "STRING", "AUTO", "OF", "ARR", 
			"INHERIT", "FUNCTION", "IF", "ELSE", "BREAK", "RETURN", "OUT", "FOR", 
			"CONTINUE", "DO", "WHILE", "TRUE", "FALSE", "COMMENT", "C_COMMENT", "ID", 
			"LB", "RB", "SQLB", "SQRB", "DOT", "COMMA", "SEMI", "COLON", "LCB", "RCB", 
			"ADDSUB", "MULDIVMOD", "ANDOR", "COMPARE", "ADD", "MINUS", "MUL", "DIV", 
			"PCENT", "NOT", "AND", "OR", "SAME", "NOTSAME", "LOWER", "HIGHER", "LOWER_EQ", 
			"HIGHER_EQ", "SCOPE", "EQ", "WS", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", 
			"ERROR_CHAR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MT22.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	  


	public MT22Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public DecllistContext decllist() {
			return getRuleContext(DecllistContext.class,0);
		}
		public TerminalNode EOF() { return getToken(MT22Parser.EOF, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			decllist();
			setState(113);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DecllistContext extends ParserRuleContext {
		public DeclContext decl() {
			return getRuleContext(DeclContext.class,0);
		}
		public DecllistContext decllist() {
			return getRuleContext(DecllistContext.class,0);
		}
		public DecllistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decllist; }
	}

	public final DecllistContext decllist() throws RecognitionException {
		DecllistContext _localctx = new DecllistContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_decllist);
		try {
			setState(119);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(115);
				decl();
				setState(116);
				decllist();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(118);
				decl();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclContext extends ParserRuleContext {
		public VardeclContext vardecl() {
			return getRuleContext(VardeclContext.class,0);
		}
		public FuncdeclContext funcdecl() {
			return getRuleContext(FuncdeclContext.class,0);
		}
		public DeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decl; }
	}

	public final DeclContext decl() throws RecognitionException {
		DeclContext _localctx = new DeclContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_decl);
		try {
			setState(123);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(121);
				vardecl();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(122);
				funcdecl();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VardeclContext extends ParserRuleContext {
		public VarnoinitContext varnoinit() {
			return getRuleContext(VarnoinitContext.class,0);
		}
		public VarassignContext varassign() {
			return getRuleContext(VarassignContext.class,0);
		}
		public ArrayContext array() {
			return getRuleContext(ArrayContext.class,0);
		}
		public VardeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vardecl; }
	}

	public final VardeclContext vardecl() throws RecognitionException {
		VardeclContext _localctx = new VardeclContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_vardecl);
		try {
			setState(128);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(125);
				varnoinit();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(126);
				varassign();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(127);
				array();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarnoinitContext extends ParserRuleContext {
		public IdlistContext idlist() {
			return getRuleContext(IdlistContext.class,0);
		}
		public TerminalNode COLON() { return getToken(MT22Parser.COLON, 0); }
		public VartypeContext vartype() {
			return getRuleContext(VartypeContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(MT22Parser.SEMI, 0); }
		public VarnoinitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varnoinit; }
	}

	public final VarnoinitContext varnoinit() throws RecognitionException {
		VarnoinitContext _localctx = new VarnoinitContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_varnoinit);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			idlist();
			setState(131);
			match(COLON);
			setState(132);
			vartype();
			setState(133);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarassignContext extends ParserRuleContext {
		public IdlistContext idlist() {
			return getRuleContext(IdlistContext.class,0);
		}
		public TerminalNode COLON() { return getToken(MT22Parser.COLON, 0); }
		public VartypeContext vartype() {
			return getRuleContext(VartypeContext.class,0);
		}
		public TerminalNode EQ() { return getToken(MT22Parser.EQ, 0); }
		public ExprlistContext exprlist() {
			return getRuleContext(ExprlistContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(MT22Parser.SEMI, 0); }
		public VarassignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varassign; }
	}

	public final VarassignContext varassign() throws RecognitionException {
		VarassignContext _localctx = new VarassignContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_varassign);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			idlist();
			setState(136);
			match(COLON);
			setState(137);
			vartype();
			setState(138);
			match(EQ);
			setState(139);
			exprlist();
			setState(140);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VartypeContext extends ParserRuleContext {
		public TerminalNode INTEGER() { return getToken(MT22Parser.INTEGER, 0); }
		public TerminalNode FLOAT() { return getToken(MT22Parser.FLOAT, 0); }
		public TerminalNode BOOLEAN() { return getToken(MT22Parser.BOOLEAN, 0); }
		public TerminalNode STRING() { return getToken(MT22Parser.STRING, 0); }
		public TerminalNode AUTO() { return getToken(MT22Parser.AUTO, 0); }
		public VartypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vartype; }
	}

	public final VartypeContext vartype() throws RecognitionException {
		VartypeContext _localctx = new VartypeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_vartype);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INTEGER) | (1L << FLOAT) | (1L << BOOLEAN) | (1L << STRING) | (1L << AUTO))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Atomic_typeContext extends ParserRuleContext {
		public TerminalNode INTEGER() { return getToken(MT22Parser.INTEGER, 0); }
		public TerminalNode FLOAT() { return getToken(MT22Parser.FLOAT, 0); }
		public TerminalNode BOOLEAN() { return getToken(MT22Parser.BOOLEAN, 0); }
		public TerminalNode STRING() { return getToken(MT22Parser.STRING, 0); }
		public Atomic_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atomic_type; }
	}

	public final Atomic_typeContext atomic_type() throws RecognitionException {
		Atomic_typeContext _localctx = new Atomic_typeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_atomic_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INTEGER) | (1L << FLOAT) | (1L << BOOLEAN) | (1L << STRING))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdlistContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(MT22Parser.ID, 0); }
		public TerminalNode COMMA() { return getToken(MT22Parser.COMMA, 0); }
		public IdlistContext idlist() {
			return getRuleContext(IdlistContext.class,0);
		}
		public IdlistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_idlist; }
	}

	public final IdlistContext idlist() throws RecognitionException {
		IdlistContext _localctx = new IdlistContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_idlist);
		try {
			setState(150);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(146);
				match(ID);
				setState(147);
				match(COMMA);
				setState(148);
				idlist();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(149);
				match(ID);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArrayContext extends ParserRuleContext {
		public ArraydeclContext arraydecl() {
			return getRuleContext(ArraydeclContext.class,0);
		}
		public ArrayinitContext arrayinit() {
			return getRuleContext(ArrayinitContext.class,0);
		}
		public ArrayContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_array; }
	}

	public final ArrayContext array() throws RecognitionException {
		ArrayContext _localctx = new ArrayContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_array);
		try {
			setState(154);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(152);
				arraydecl();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(153);
				arrayinit();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArraydeclContext extends ParserRuleContext {
		public IdlistContext idlist() {
			return getRuleContext(IdlistContext.class,0);
		}
		public TerminalNode COLON() { return getToken(MT22Parser.COLON, 0); }
		public ArrayParamContext arrayParam() {
			return getRuleContext(ArrayParamContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(MT22Parser.SEMI, 0); }
		public ArraydeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arraydecl; }
	}

	public final ArraydeclContext arraydecl() throws RecognitionException {
		ArraydeclContext _localctx = new ArraydeclContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_arraydecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(156);
			idlist();
			setState(157);
			match(COLON);
			setState(158);
			arrayParam();
			setState(159);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArrayinitContext extends ParserRuleContext {
		public IdlistContext idlist() {
			return getRuleContext(IdlistContext.class,0);
		}
		public TerminalNode COLON() { return getToken(MT22Parser.COLON, 0); }
		public ArrayParamContext arrayParam() {
			return getRuleContext(ArrayParamContext.class,0);
		}
		public TerminalNode EQ() { return getToken(MT22Parser.EQ, 0); }
		public ArraylitContext arraylit() {
			return getRuleContext(ArraylitContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(MT22Parser.SEMI, 0); }
		public ArrayinitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arrayinit; }
	}

	public final ArrayinitContext arrayinit() throws RecognitionException {
		ArrayinitContext _localctx = new ArrayinitContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_arrayinit);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(161);
			idlist();
			setState(162);
			match(COLON);
			setState(163);
			arrayParam();
			setState(164);
			match(EQ);
			setState(165);
			arraylit();
			setState(166);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArraylitContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(MT22Parser.ID, 0); }
		public ArrayValContext arrayVal() {
			return getRuleContext(ArrayValContext.class,0);
		}
		public ArraylitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arraylit; }
	}

	public final ArraylitContext arraylit() throws RecognitionException {
		ArraylitContext _localctx = new ArraylitContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_arraylit);
		try {
			setState(170);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(168);
				match(ID);
				}
				break;
			case LCB:
				enterOuterAlt(_localctx, 2);
				{
				setState(169);
				arrayVal();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArrayValContext extends ParserRuleContext {
		public TerminalNode LCB() { return getToken(MT22Parser.LCB, 0); }
		public ExprlistContext exprlist() {
			return getRuleContext(ExprlistContext.class,0);
		}
		public TerminalNode RCB() { return getToken(MT22Parser.RCB, 0); }
		public ArrayValContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arrayVal; }
	}

	public final ArrayValContext arrayVal() throws RecognitionException {
		ArrayValContext _localctx = new ArrayValContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_arrayVal);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(172);
			match(LCB);
			setState(173);
			exprlist();
			setState(174);
			match(RCB);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArrayParamContext extends ParserRuleContext {
		public TerminalNode ARR() { return getToken(MT22Parser.ARR, 0); }
		public TerminalNode SQLB() { return getToken(MT22Parser.SQLB, 0); }
		public DimensionContext dimension() {
			return getRuleContext(DimensionContext.class,0);
		}
		public TerminalNode SQRB() { return getToken(MT22Parser.SQRB, 0); }
		public TerminalNode OF() { return getToken(MT22Parser.OF, 0); }
		public Atomic_typeContext atomic_type() {
			return getRuleContext(Atomic_typeContext.class,0);
		}
		public ArrayParamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arrayParam; }
	}

	public final ArrayParamContext arrayParam() throws RecognitionException {
		ArrayParamContext _localctx = new ArrayParamContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_arrayParam);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(176);
			match(ARR);
			setState(177);
			match(SQLB);
			setState(178);
			dimension();
			setState(179);
			match(SQRB);
			setState(180);
			match(OF);
			setState(181);
			atomic_type();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
